# x52MFD

./: CMakeLists.txt  Findx52pro.cmake  Joystick.cpp  Joystick.hpp  MFD.cpp  MFD.hpp  Makefile  MsgParser.cpp  MsgParser.hpp  README.md  UdpServer.cpp  UdpServer.hpp  fgfsx52MFD.sh  x52.xml  x52MFD  x52MFD.cpp  x52MFD.hpp
